Footer qo‘shildi va SCSS style o‘rnatildi

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h1 class="hero-heading">Just do it</h1>
         </div>
         <div class="hero-preview">
-          <img src="./images/hero.png" alt="">
+          <img class="preview-img" src="./images/hero.png" alt="" width="100%">
           <button class="play-button">
             <img src="./images/play.svg" alt="" width="32px">
           </button>
