Footer qo‘shildi va SCSS style o‘rnatildi

--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
     <footer class="footer">
       <div class="footer__container">
         <div class="footer__left">
-          <img src="./images/logo.svg" alt="">
+          <a class="footer_logo" href="#">
+            <img src="./images/logo.svg" alt="">
+          </a>
           <p class="footer__text">
             Turn your phone or smartwatch into your coach - track your workouts and get tons of data and tips to help
             you run better.
